Fixed the spacings on the p, pre, h1, h2, h3 ul elements on the article details. Fixed the width of the preloader on the mobile devices

--- a/src/assets/css/mobile-hires.css
+++ b/src/assets/css/mobile-hires.css
@@ -50,6 +50,10 @@ header.navigation nav ul li a:visited {
     padding:0px 20px 20px 20px !important;
 }
 
+#sections-wrapper .preloader {
+    width:275px !important;
+}
+
 #sections-wrapper section {
     -webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
