--- a/src/assets/css_less/postdetails.less
+++ b/src/assets/css_less/postdetails.less
@@ -153,16 +153,16 @@ section.post-details {
             font-family:@fontMain;
             font-weight:normal;
             text-shadow:0px 1px 1px rgba(255,255,255,0.8);
-            margin:10px 0px 10px 0px;
+            margin:0px 0px 15px 0px;
             color:#666;
         }
 
         p {
-            padding:5px 0px 5px 0px;
+            margin:0px 0px 15px 0px;
         }
 
         img {
-            margin:10px 0px 10px 0px;
+            margin:0px 0px 15px 0px;
             max-width:100%;
             height:auto;
             border:3px solid #fff;
@@ -172,14 +172,16 @@ section.post-details {
         }
 
         ul {
-            padding:10px 0px 10px 0px;
+
+            margin:0px 0px 15px 0px;
+
             li {
                 margin-left:20px;
             }
         }
 
         iframe {
-            margin:10px 0px 10px 0px;
+            margin:0px 0px 15px 0px;
             .box-sizing(border-box);
             .box-shadow(1px 1px 1px rgba(0,0,0,0.2));
         }
@@ -189,6 +191,7 @@ section.post-details {
             margin-top:10px;
 
             pre {
+
                 tab-size:4;
                 -o-tab-size:4;
                 -moz-tab-size:4;
@@ -202,6 +205,8 @@ section.post-details {
                 .box-shadow (e('inset 0px 0px 12px rgba(0,0,0,0.2), 0px 1px 1px rgba(255,255,255,1)'));
                 overflow-x: auto;
                 color: #333;
+                margin:0px 0px 15px 0px;
+
             }
 
         }
